# mt-gtm-outbound-agent

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Procfile  README.md  activities.py  fly.toml  pyproject.toml  requirements.txt  run_worker.py  run_workflow.py  workflows.py
db/: schema.sql
db/migrations/: 20250916214831_create_accounts.sql
scripts/: dev.py  run_worker.py  run_workflow.py
utils/: __init__.py  openai_utils.py  temporal_utils.py
